--- a/package.json
+++ b/package.json
@@ -65,10 +65,17 @@
   },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.8.0",
+    "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.36",
+    "@material-ui/pickers": "^3.2.8",
+    "autosuggest-highlight": "^3.1.1",
     "chalk": "2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
+    "date-fns": "^2.8.1",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
     "history": "4.9.0",
